# hypermodern

./: .gitignore  README.md  noxfile.py  pyproject.toml
src/hypermodern/: console.py  wikipedia.py
tests/: test_console.py  test_wikipedia.py
