[tool.poetry]
name = "hypermodern"
version = "0.1.0"
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/juholeinonen/hypermodern"
repository = "https://github.com/juholeinonen/hypermodern"
keywords = ["hypermodern"]
authors = ["Juho Leinonen <juho.leinonen@aalto.fi>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
hypermodern = "hypermodern.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
