[tool.poetry]
name = "hypermodern"
version = "0.1.0"
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/juholeinonen/hypermodern"
repository = "https://github.com/juholeinonen/hypermodern"
keywords = ["hypermodern"]
authors = ["Juho Leinonen <juho.leinonen@aalto.fi>"]


[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.1"
requests = "^2.25.1"


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"


[tool.poetry.scripts]
hypermodern = "hypermodern.console:main"


[tool.coverage.paths]
source = ["src", "*/site-packages"]


[tool.coverage.run]
branch = true
source = ["hypermodern"]


[tool.coverage.report]
show_missing = true
fail_under = 100


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
